--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+    <head>
+<title>CSCE 190: Jackson Trigiani</title>
+    </head>
+    <body>
+<h1>Jackson Trigiani's CSCE 190 Site</h1>
+    </body>
+</html>
