--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
     <head>
 <title>CSCE 190: Jackson Trigiani</title>
     </head>
-    <body>
 <h1>Jackson Trigiani's CSCE 190 Site</h1>
+
+        <section class="assignment">
+            <a href="problemstatement.pdf"><img src="problem-statement.png" width="250" height="140"></a>
+
+            <section class="ass-details">
+                <a href="problemstatement.pdf"><h2>Problem Statement: Personal Fitness</h2></a>
+                <p>
+                    Our users want to exercise with proper form but are not familiar with the exercises for particular muscle groups. 
+                    Our solution aims to inform first time gym users with curated exercise routines, pre-workout stretches, and fitness tracking.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
