--- a/index.html
+++ b/index.html
@@ -4,15 +4,26 @@
 <title>CSCE 190: Jackson Trigiani</title>
     </head>
 <h1>Jackson Trigiani's CSCE 190 Site</h1>
-
+    <!-- Problem Statement Assignment -->
         <section class="assignment">
-            <a href="files/problemstatement.pdf"><img src="images/problem-statement.png" width="250" height="140"></a>
+            <a href="files/problemstatement.pdf"><img src="images/problem-statement.png" width="350" height="350"></a>
 
             <section class="ass-details">
                 <a href="files/problemstatement.pdf"><h2>Problem Statement: Personal Fitness</h2></a>
                 <p>
                     Our users want to exercise with proper form but are not familiar with the exercises for particular muscle groups. 
                     Our solution aims to inform first time gym users with curated exercise routines, pre-workout stretches, and fitness tracking.
+                </p>
+            </section>
+        </section>
+    <!-- Affinity Diagram Assignment-->
+        <section class="assignment">
+            <a href="files/affinityDiagram.pdf"><img src="images/affinityDiagram.png" width="350" height="350"></a>
+
+            <section class="ass-details">
+                <a href="files/affinityDiagram.pdf"><h2>Affinity Diagram: Personal Fitness</h2></a>
+                <p>
+                   With my group, I brainstormed a bunch of ideas and organized them into an affinity diagram.
                 </p>
             </section>
         </section>
