--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>CSCE 190: Jackson Trigiani</title>
+        <title>CSCE 190: Jackson Trigiani</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 <h1>Jackson Trigiani's CSCE 190 Site</h1>
     <!-- Problem Statement Assignment -->
