--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h1>Jackson Trigiani's CSCE 190 Site</h1>
     <!-- Problem Statement Assignment -->
         <section class="assignment">
-            <a href="files/problemstatement.pdf"><img src="images/problem-statement.png" width="350" height="350"></a>
+            <a href="files/problemstatement.pdf"><img src="images/problem-statement.png" ></a>
 
             <section class="ass-details">
                 <a href="files/problemstatement.pdf"><h2>Problem Statement: Personal Fitness</h2></a>
@@ -19,12 +19,23 @@
         </section>
     <!-- Affinity Diagram Assignment-->
         <section class="assignment">
-            <a href="files/affinityDiagram.pdf"><img src="images/affinityDiagram.png" width="350" height="350"></a>
+            <a href="files/affinityDiagram.pdf"><img src="images/affinityDiagram.png" ></a>
 
             <section class="ass-details">
                 <a href="files/affinityDiagram.pdf"><h2>Affinity Diagram: Personal Fitness</h2></a>
                 <p>
                    With my group, I brainstormed a bunch of ideas and organized them into an affinity diagram.
+                </p>
+            </section>
+        </section>
+        <!-- Personna Assignment-->
+        <section class="assignment">
+            <a href="files/personnna.pdf"><img src="images/personna.png" ></a>
+
+            <section class="ass-details">
+                <a href="files/personnna.pdf"><h2>Personnas: 5 Daily Users </h2></a>
+                <p>
+                    Each member of my group created a personna for a possible user of our personal fitness app. 
                 </p>
             </section>
         </section>
