--- a/index.html
+++ b/index.html
@@ -39,5 +39,16 @@
                 </p>
             </section>
         </section>
+        <!-- Storyboard Assignment-->
+        <section class="assignment">
+            <a href="files/storyboard.pdf"><img src="images/storyboard.png" ></a>
+
+            <section class="ass-details">
+                <a href="files/storyboard.pdf"><h2>Personnas: 5 Daily Users </h2></a>
+                <p>
+                    Each member of my group created a personna for a possible user of our personal fitness app. 
+                </p>
+            </section>
+        </section>
     </body>
 </html>
