--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <a href="files/storyboard.pdf"><img src="images/storyboard.png" ></a>
 
             <section class="ass-details">
-                <a href="files/storyboard.pdf"><h2>Personnas: 5 Daily Users </h2></a>
+                <a href="files/storyboard.pdf"><h2>Storyboard: One storyboard for each of the five personnas. </h2></a>
                 <p>
-                    Each member of my group created a personna for a possible user of our personal fitness app. 
+                    Each member of my group created a storyboard the personna they previously created.
                 </p>
             </section>
         </section>
