--- a/index.html
+++ b/index.html
@@ -50,5 +50,16 @@
                 </p>
             </section>
         </section>
+           <!-- Sketches Assignment-->
+           <section class="assignment">
+            <a href="files/sketches.pdf"><img src="images/sketches.png" ></a>
+
+            <section class="ass-details">
+                <a href="files/sketches.pdf"><h2>Sketches </h2></a>
+                <p>
+                    Each member of my group sketched out unique ideas for our app.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
