--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="assignments">
         <!-- Problem Statement Assignment -->
             <section class="assignment">
-                <a href="files/problemstatement.pdf"><h2>Problem Statement: Personal Fitness</h2></a>
+                <a href="files/problemstatement.pdf"><h2>Problem Statement</h2></a>
                 <a href="files/problemstatement.pdf"><img src="images/problem-statement.png" ></a>
                     <p>
                         Our users want to exercise with proper form but are not familiar with the exercises for particular muscle groups. 
@@ -18,7 +18,7 @@
             </section>
         <!-- Affinity Diagram Assignment-->
             <section class="assignment">
-                <a href="files/affinityDiagram.pdf"><h2>Affinity Diagram: Personal Fitness</h2></a>
+                <a href="files/affinityDiagram.pdf"><h2>Affinity Diagram</h2></a>
                 <a href="files/affinityDiagram.pdf"><img src="images/affinityDiagram.png" ></a>
                  <p>
                  With my group, I brainstormed a bunch of ideas and organized them into an affinity diagram.
@@ -27,7 +27,7 @@
             </section>
             <!-- Personna Assignment-->
             <section class="assignment">
-                <a href="files/personnna.pdf"><h2>Personnas: 5 Daily Users </h2></a>
+                <a href="files/personnna.pdf"><h2>Personnas</h2></a>
                 <a href="files/personnna.pdf"><img src="images/personna.png" ></a>
                     <p>
                         Each member of my group created a personna for a possible user of our personal fitness app. 
@@ -36,7 +36,7 @@
             </section>
             <!-- Storyboard Assignment-->
             <section class="assignment">
-                <a href="files/storyboard.pdf"><h2>Storyboard: One storyboard for each of the five personnas. </h2></a>
+                <a href="files/storyboard.pdf"><h2>Storyboard </h2></a>
                 <a href="files/storyboard.pdf"><img src="images/storyboard.png" ></a>
 
 
@@ -69,7 +69,16 @@
                 <a href="files/hiFiPrototype/index.html"><h2>High Fidelity Prototype</h2></a>
                 <a href="files/hiFiPrototype/index.html"><img src="images/prototype.png" ></a>
                     <p>
-                        A walkthrough of my team's personal fitness application.
+                        A walkthrough of my team's high fidelity prototype of our personal fitness application.
+                    </p>
+            
+            </section>
+            <!-- Presentation Assignment -->
+            <section class="assignment">
+                <a href="https://youtu.be/JC5AFhuRGEo"><h2>Final Presentation</h2></a>
+                <a href="https://youtu.be/JC5AFhuRGEo"><img src="images/presentation.png" ></a>
+                    <p>
+                        A presentation on my team's completed prototype of a Personal Fitness application.
                     </p>
             
             </section>
